config-root/namespaces/jx-staging/payments-service/payments-service-payments-service-deploy.yaml
# Source: payments-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-service-payments-service
  labels:
    draft: draft-app
    chart: "payments-service-0.0.19"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: payments-service-payments-service
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: payments-service-payments-service
    spec:
      containers:
        - name: payments-service
          image: "gcr.io/camunda-researchanddevelopment/payments-service:0.0.19"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
