config-root/namespaces/jx-staging/payments-service/payments-service-svc.yaml
# Source: payments-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-service
  labels:
    chart: "payments-service-0.0.19"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: payments-service-payments-service
