config-root/namespaces/jx-staging/payments-service/payments-service-ingress.yaml
# Source: payments-service/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: payments-service
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: payments-service
              servicePort: 80
      host: payments-service-jx-staging.35.222.17.41.nip.io
